# mcp-glpi-wave-hub

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/: README.md  deploy-proxmox.sh  setup-lxc.sh
src/: __init__.py  client.py  config.py  main.py
src/models/: __init__.py  asset.py  change.py  contract.py  document.py  kb.py  location.py  problem.py  project.py  software.py  ticket.py  user.py
src/tools/: __init__.py  admin.py  assets.py  changes.py  documents.py  knowledgebase.py  problems.py  projects.py  search.py  software.py  statistics.py  tickets.py  users_groups.py
src/utils/: __init__.py  formatters.py  status_maps.py
tests/: test_config.py
